# asset-library

./: .gitattributes  .gitignore  CONTRIBUTING.md  Gemfile  LICENSE  README.md  _config.yml  asset-library-concept.html  asset-library-concept.md  feed.xml  index.html  pyproject.toml  requirements.txt  robots.txt  setup.sh
.github/ISSUE_TEMPLATE/: asset-submission.md
.github/workflows/: build-catalog.yml  deploy-to-gh-pages.yml  test-lfs-pages.yml  validate-assets.yml
_site/: sitemap.xml
_site/assets/images/branding/rey-it-solutions-logo-001/: checksums.txt
_site/assets/images/example/sample-001/: metadata.json
_site/assets/images/technology/technitium-logo-001/: checksums.txt
_site/catalog/: assets.json  images.json  index.json
assets/images/branding/rey-it-solutions-logo-001/: metadata.json
assets/images/branding/rey-it-solutions-logo-002/: checksums.txt  metadata.json
assets/images/branding/rey-it-solutions-logo-003/: checksums.txt  metadata.json
assets/images/example/sample-001/: checksums.txt  metadata.json
assets/images/technology/technitium-logo-001/: metadata.json
catalog/: assets.json  images.json  index.json
docs/: api.html  api.md  asset-specifications.md  metadata-schema.html  metadata-schema.md  processing-workflows.md
scripts/: build-catalog.py  generate-checksums.py  migrate-images.py  validate-assets.py
